<resources>
    <string name="app_name">E-Welfare UOK</string>
    <string name="permission_warning">To continue, please enable Camera and Read Write External Storage permission for this application.</string>
    <string name="dismiss">Dismiss</string>
    <string name="unknown">Unknown</string>
    <string name="student_no">Student No</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="code_with_4_characters">Enter code</string>
    <string name="verify">Verify</string>
    <string name="verification">Verification</string>
</resources>
